--- a/nginx-ingress-jaeger/patch-nginx-configuration.yaml
+++ b/nginx-ingress-jaeger/patch-nginx-configuration.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 data:
   enable-opentracing: "true"
-  jaeger-collector-host: jaeger-agent.tracing.svc.cluster.local
+  jaeger-collector-host: "localhost:6831"
 metadata:
   name: nginx-configuration
   namespace: ingress-nginx
